修改ETL的代码，修改添加和选择限制

--- a/editBI.html
+++ b/editBI.html
@@ -575,7 +575,7 @@
 					</div>
 					<div class="f-box2">
 						<div class="f-select-box1">
-							<select name="">
+							<select onchange="project.textData()">
 								<option value="AND">包含以下所有条件</option>
 								<option value="OR">包含以下任一条件</option>
 							</select>
