--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -94,9 +94,8 @@
         <div class="fromInp">
             <label style="float: left;">提取字段：</label>
             <div class="extractFields" style="float: left;">
-
                 <div class="archive extractField">
-                    <select class="fields auto_save" style="width:150px;height: 28px;margin-left: 12px;"/></select>
+                    <select class="field auto_save" style="width:150px;height: 28px;margin-left: 12px;"></select>
                     <!--<input type="text" class="remark"/>-->
                     <div class="regulation">
                         <span class="add more_save"></span>
