修改右键菜单bug：以时间戳为id，如果速度太快，id会一致！ 修改BI添加页面的行业，修改为ELT的行业

--- a/html/biTemplet.html
+++ b/html/biTemplet.html
@@ -18,12 +18,12 @@
         </div>
         <div class="form_validator">
             <label>行业：</label>
-            <select>
-                <option value="全部">全部</option>
-                <option value="房地产">房地产</option>
-                <option value="酒店">酒店</option>
-                <option value="互联网">互联网</option>
-                <option value="自定义">自定义</option>
+            <select id="biTemplet_industry">
+                <!--<option value="全部">全部</option>-->
+                <!--<option value="房地产">房地产</option>-->
+                <!--<option value="酒店">酒店</option>-->
+                <!--<option value="互联网">互联网</option>-->
+                <!--<option value="自定义">自定义</option>-->
             </select>
         </div>
         <!--<div class="form_validator">
