--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -530,10 +530,10 @@
 		function fn_set_extractFields(extractFields) {
 			var extractFieldHtml = $('.extractField').prop('outerHTML');
 			$('.extractField').remove();
+			console.log(extractFields);
 			$.each(extractFields, function () {
 				var table = this.table;
 				var field = this.field;
-				var alias = this.alias.replace(/(^\s*)|(\s*$)/g, '').length <= 0?this.remark:this.alias;  // 如果数据为空，或者是全部为空格，则显示this.remark
 				var remarks = this.remark;
 				var fn = this.fn;
 				$('.extractFields').append(extractFieldHtml);
@@ -541,7 +541,10 @@
 				var extractField = $('.extractField:last');
 				extractField.find('.table option[value="'+table+'"]').attr("selected","selected");
 				extractField.find('.field option[value="'+field+'"]').attr("selected","selected");
-				extractField.find('.alias').val(alias);
+				if(this.alias){
+					var alias = this.alias.replace(/(^\s*)|(\s*$)/g, '').length <= 0?this.remark:this.alias;  // 如果数据为空，或者是全部为空格，则显示this.remark
+					extractField.find('.alias').val(alias);
+				}
 				extractField.find('.fn').val(fn);
 			});
 		}
