修改官网关于我们的公司介绍内容

--- a/html/about/aboutUs.html
+++ b/html/about/aboutUs.html
@@ -67,7 +67,7 @@
             <div class="on">
                 <img src="../../images/about-us.png"/>
                 <h5>公司介绍</h5>
-                <p class="about-aboutUS">深圳市深脑科技有限公司成立于2017年12月,注册资本100万人民币,公司的主营业务是以物联网、云计算、大数据、人工智能等高新技术为基础,逐步构建以知识图谱为基础的具有自主学习能力的智能感知、智能算法、智能认知、智能预测和智能决策的银行金融业和成产经营企业的大数据智能营销CRM决策平台。</p>
+                <p class="about-aboutUS">深圳市深脑科技有限公司,公司的主营业务是以物联网、云计算、大数据、人工智能等高新技术为基础,逐步构建以知识图谱为基础的具有自主学习能力的智能感知、智能算法、智能认知、智能预测和智能决策的银行金融业和成产经营企业的大数据智能营销CRM决策平台。</p>
                 <h5>技术沉淀</h5>
                 <p class="about-aboutUS">专注云计算和大数据平台系统研发。</p>
                 <p class="about-aboutUS">核心团队成员来自腾讯、华为、百度等IT名企。</p>
