--- a/html/3d/index.html
+++ b/html/3d/index.html
@@ -511,22 +511,53 @@
 	<script src="js/index.js"></script>
 	<script type="text/javascript">
 		(function(){
+            function star_star(width,height){
+                $("#html5_3d_animation").html5_3d_animation({
+                    window_width:width,
+                    window_height: height,
+                    window_background: '#000',
+                    star_count: '1800',
+                    star_color: '#fff',
+                    star_depth: '1000'
+                });
+            }
+
 			var width=$(window).width(),height=$(window).height();
 			$(window).resize(function () {          //当浏览器大小变化时
 				width=$(window).width();height=$(window).height();
 			});
 			star_star(width,height);
 		})();
-		function star_star(width,height){
-			$("#html5_3d_animation").html5_3d_animation({
-				window_width:width,
-				window_height: height,
-				window_background: '#000',
-				star_count: '1800',
-				star_color: '#fff',
-				star_depth: '1000'
-			});
-		}
+
+
+        const wheel = function(event) {
+            var delta = 0;
+            if (!event) /* For IE. */
+                event = window.event;
+            if (event.wheelDelta) { /* IE/Opera. */
+                delta = event.wheelDelta / 120;
+            } else if (event.detail) {
+                delta = -event.detail / 3;
+            }
+            if (delta)
+                handle(delta);
+            if (event.preventDefault)
+                event.preventDefault();
+            event.returnValue = false;
+        };
+        if (window.addEventListener) {
+            /** DOMMouseScroll is for mozilla. */
+            window.addEventListener('DOMMouseScroll', wheel, false);
+        }
+        window.onmousewheel = document.onmousewheel = wheel;
+        const handle = function(delta) {
+            if (delta < 0) {
+                window.parent.scrollSlide()
+            }else{
+                window.parent.scrollPrevious();
+			}
+        };
+
 	</script>
 </body>
 </html>
