--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -132,6 +132,27 @@
 			height: 200px;
 			overflow-y: visible
 		}
+		.remarks {
+			overflow: hidden;
+			padding: 10px 0;
+			background: #f7f9fc;
+			border-top: 1px solid #f1f1f1;
+			border-bottom: 1px solid #f1f1f1;
+			border: 1px solid #ccc;
+			margin: 5px 5px 0 0;
+			border-radius: 3px
+		}
+
+		.remarks .remark_key {
+			display: inline-block;
+			width: 80px;
+			text-align: center;
+			font-size: 14px
+		}
+
+		.remarks .remark_value {
+			font-size: 14px;
+		}
 	</style>
 	<script type="text/javascript" src="../plugin/gooflow/jquery.min.js"></script>
 	<script src="../js/login.js"></script>
@@ -159,7 +180,6 @@
 		var this_new = true;
 		var this_webComponentId;
 		var this_actionCompType;
-		var this_filed = {};
 		var $url = '../xdbd-etl'; ///xdbd-etl
 
 		if (this_onenv == 'dev') {
@@ -178,7 +198,7 @@
 		var property = {
 			width: 1230,
 			height: 800,
-			toolBtns: ["groups", "sort", "where", "output", "input", "join"],
+			toolBtns: ["groups", "sort", "where", "input", "output", "join"],
 			haveHead: true,
 			//        headLabel:true,
 			initLabelText: '流程图',
@@ -195,8 +215,8 @@
 			groups: "分组结点",
 			sort: "排序结点",
 			where: "过滤结点",
-			output: "表输出结点",
 			input: "表输入结点",
+			output: "表输出结点",
 			join: "关联结点",
 			group: "组织划分框编辑开关",
 			//        'new':"新建",
@@ -245,7 +265,6 @@
 						$.getScript("../plugin/webContent/" + this_actionCompType + "/" + this_actionCompType + ".js");
 					});
 				} else if (model == "area") {
-					// console.log(model)
 				}
 				etlName = obj.name;
 				return true;
@@ -254,66 +273,71 @@
 				document.getElementById("propertyForm").reset();
 				return true;
 			};
-			//新建流程图
-			//        demo.onBtnNewClick=function() {
-			//          if(this_new) {
-			//            layer.confirm('是否需要保存当前内容？', {
-			//              btn: ['确定','取消'] //按钮
-			//            }, function(){
-			//              fn_saveActionComp_exec(Export());
-			//            }, function(){
-			//              window.location.href = 'etlStencil.html';
-			//            });
-			//          } else {
-			//            window.location.href = 'etlStencil.html';
-			//          }
-			//        };
+
 			//刷新流程图
 			demo.onFreshClick = function () {
 				location.reload();
 			};
 			//预览
 			demo.onBtnPreviewClick = function () {
-				$.ajax({
-					type: "POST",
-					url: $url + "/api/action/v1/actionPreview",///xdbd-etl
-					dataType: "json",
-					contentType: "application/json",
-					data: JSON.stringify({
-						"actionId": this_actionId,
-						"versionId": this_versionId
-					}),
-					success: function (data) {
-						//console.log(data)
-						if (data.code == 0) {
-							var head = data.data.head;
-							var data = data.data.data;
-							var previewData = [];
-							var previewHead = [];
+				var etlType = [];
+				// $.each(JSON.parse(Export()).nodes,function() {
+				// 	etlType.push(this.type);
+				// 	if(this.type == 'output') {
+						$.ajax({
+							type: "POST",
+							url: $url + "/api/action/v1/actionPreview",///xdbd-etl
+							dataType: "json",
+							contentType: "application/json",
+							data: JSON.stringify({
+								"actionId": this_actionId,
+								"versionId": this_versionId
+							}),
+							success: function (data) {
+								if (data.code == 0) {
+									var head = data.data.head;
+									var data = data.data.data;
+									var previewData = [];
+									var previewHead = [];
 
-							$.each(head, function (index, item) {
-								previewHead.push('<th>' + item + '</th>');
-							})
+									$.each(head, function (index, item) {
+										previewHead.push('<th>' + item + '</th>');
+									})
 
-							$.each(data, function (index_tr, tr) {
-								var aaa = '';
-								$.each(head, function (index_hd, th) {
-									//alert(tr[th])
-									aaa = aaa + '<td>' + tr[th] + '</td>';
-								});
-								previewData.push('<tr>' + aaa + '</tr>')
-							})
+									$.each(data, function (index_tr, tr) {
+										var aaa = '';
+										$.each(head, function (index_hd, th) {
+											//alert(tr[th])
+											aaa = aaa + '<td>' + tr[th] + '</td>';
+										});
+										previewData.push('<tr>' + aaa + '</tr>')
+									})
 
-							fn_preview(previewHead, previewData);
-						} else {
-							layer.msg(data.message, { time: 1000 })
-						}
-					}
-				});
+									fn_preview(previewHead, previewData);
+								} else {
+									layer.msg(data.message, { time: 1000 })
+								}
+							}
+						});
+					// }
+				// });
+				// $.each(etlType,function() {
+				// 	if(this != 'output') {
+				// 		layer.msg("请添加输出组件",{ time: 1000 })
+				// 	}
+				// })
 			};
 			//执行
 			demo.onBtnExecuteClick = function () {
-				fn_upload_parquet();
+				layer.confirm('执行程序会清空原来的程序,是否确定执行？', {
+					btn: ['确定','取消'] //按钮
+				}, function(){
+					fn_upload_parquet();
+				}, function(){
+					layer.msg('已保留原数据', {icon: 1});
+				});
+				// };
+				// fn_upload_parquet();
 			};
 			//另存为模板
 			demo.onBtnSaveCopyClick = function () {
@@ -411,8 +435,9 @@
 		//根据webComponentId获取actionComp
 		function fn_get_actionComp_by_webComponentId(webComponentId) {
 			var actionComp;
+			console.log(actionComps)
 			$.each(actionComps, function () {
-				if (this.webComponentId === webComponentId) {
+				if (this.webComponentId == webComponentId) {
 					actionComp = this;
 					return true;
 				}
@@ -421,11 +446,10 @@
 		}
 
 		//根据fromTable获取fields
-		function fn_get_fields_by_fromTable(webCompId,fromTable) {
+		function fn_get_fields_by_fromTable(fromTable) {
 			var fieldOut;
-			$.each(actionComps, function () {
-				if (this.tableOut == fromTable || this.webComponentId == webCompId) {
-					console.log(this)
+			$.each(actionComps, function (i,item) {
+				if (item.tableOut == fromTable) {
 					// fieldOut = this.fieldOut;
 					fieldOut = this.attValue;
 					return true;
@@ -437,8 +461,9 @@
 		//根据fromTable获取sqlOut
 		function fn_get_sqlOut_by_fromTable(fromTable) {
 			var sqlOut;
-			//alert(fromTable)
+			console.log(actionComps,fromTable)
 			$.each(actionComps, function () {
+				console.log(this.tableOut,fromTable)
 				if (this.tableOut == fromTable) {
 					sqlOut = this.sqlOut;
 					return true;
@@ -463,8 +488,6 @@
 				data: JSON.stringify(parameter),
 				success: function (data) {
 					var data = data.data;
-					console.log(data);
-					alert(JSON.stringify(data))
 					$.each(data, function () {
 						tables[this.tableName] = this;
 					});
@@ -507,20 +530,22 @@
 		function fn_set_extractFields(extractFields) {
 			var extractFieldHtml = $('.extractField').prop('outerHTML');
 			$('.extractField').remove();
+			console.log(extractFields);
 			$.each(extractFields, function () {
 				var table = this.table;
 				var field = this.field;
-				var alias = this.alias;
+				var remarks = this.remark;
 				var fn = this.fn;
-				//alert(extractFieldHtml)
 				$('.extractFields').append(extractFieldHtml);
 
 				var extractField = $('.extractField:last');
-				extractField.find('.table').val(table);
-				extractField.find('.field').val(field);
-				extractField.find('.alias').val(alias);
+				extractField.find('.table option[value="'+table+'"]').attr("selected","selected");
+				extractField.find('.field option[value="'+field+'"]').attr("selected","selected");
+				if(this.alias){
+					var alias = this.alias.replace(/(^\s*)|(\s*$)/g, '').length <= 0?this.remark:this.alias;  // 如果数据为空，或者是全部为空格，则显示this.remark
+					extractField.find('.alias').val(alias);
+				}
 				extractField.find('.fn').val(fn);
-
 			});
 		}
 
@@ -530,6 +555,7 @@
 				var data = {};
 				var table = $(this).find('.table').val();
 				var field = $(this).find('.field').val();
+				var remarks = $(this).find('.field option:checked').text();
 				var alias = $(this).find('.alias').val();
 				var fn = $(this).find('.fn').val();
 				if (table != null) {
@@ -537,6 +563,7 @@
 				}
 				data['field'] = field;
 				data['alias'] = alias;
+				data['remark'] = remarks;
 				data['fn'] = fn;
 				ary.push(data);
 			});
@@ -595,7 +622,6 @@
 						layer.msg(data.data.message, { time: 1000 })
 					}
 				}, error: function (data) {
-					console.log(JSON.stringify(data))
 				}
 			})
 		}
@@ -614,7 +640,6 @@
 				data: JSON.stringify(parameter),
 				success: function (data) {
 					actionComps = data.data;
-					console.log(actionComps)
 				}
 			});
 		}
@@ -633,6 +658,7 @@
 				contentType: "application/json",
 				data: JSON.stringify(parameter),
 				success: function (data) {
+					$('.remark_value').html(data.data.remark);
 					var actionDag = {};
 					if (data.data != '' && data.data != null && data.data.dag != null) {
 						this_isTemplate = data.data.isTemplate;
@@ -658,24 +684,41 @@
 				data: JSON.stringify(load),
 				success: function (data) {
 					if (data.code == 0) {
-						layer.msg('上传成功', { time: 1000 })
+						layer.msg('执行成功', {icon: 1});
 					} else {
 						layer.msg(data.message, { time: 1000 })
 					}
+				},
+				beforeSend:function(){
+					layer.load(0, {shade:[0.1,'#000']}); //0代表加载的风格，支持0-2
+				},
+				complete:function(){
+					layer.closeAll('loading'); //关闭信息框
+				},
+				error: function (err) {
+				// console.log(err);
 				}
 			});
 		}
 		//子页面的保存与生成sql
 		function init_autosave() {
+			var time = '';
 			$(document.body)
 				.off('change', '.auto_save')
 				.on('change', '.auto_save', function () {
+					var newTime = new Date().getTime();
+					if(time){
+						if((newTime-time)<100){
+							return false;
+						}
+					}
+					time = newTime;
 					$('.generateSql').trigger('click');
 					$('.saveActionComp').trigger('click');
-				})
+				});
 			$(document.body)
-				.off('click', '.auto_save')
-				.on('click', '.auto_save', function () {
+				.off('click', '.more_save')
+				.on('click', '.more_save', function () {
 					$('.generateSql').trigger('click');
 					$('.saveActionComp').trigger('click');
 				})
@@ -697,7 +740,8 @@
 				}),
 				success: function (data) {
 					if (data.code == 0) {
-						layer.msg('删除成功', { time: 1000 })
+						layer.msg('删除成功', { time: 1000 });
+						init_updateDay();
 					} else {
 						layer.msg(data.message, { time: 1000 })
 					}
@@ -710,7 +754,7 @@
 		function init_updateDay() {
 			$.ajax({
 				type: "POST",
-				url: $url + "/api/action/v1/updateDay",
+				url: $url + "/api/action/v1/updateDag",
 				dataType: "json",
 				contentType: "application/json",
 				data: JSON.stringify({
@@ -728,6 +772,63 @@
 			})
 		}
 
+
+		// 用以添加的时候，添加不同的下拉选择
+        function addRestrictions(str){
+            // 先添加后修改内容，不然不好修改元素
+            const ele = $(''+ str +':last');   // 需重新获取最后一个元素，也就是最新添加的元素outputHtml
+            const option = ele.find(".field option");   // 获取新添加的下拉框
+            const field = ele.siblings().find(".field"); // 获取添加之前的元素
+            option.each(function(){
+                const text = this.innerHTML;
+                const val = this.value;
+                let bur = true;
+                field.each(function(){
+                    const SibVal = this.value;
+                    const SibText = $(this).find("option:selected").text();
+                    if(text === SibText && SibVal === val){
+                        bur = false;
+                    }
+                });
+                if(bur){
+                    const selctedStr = $(this).attr("selected","selected").parents(str);
+                    selctedStr.find(".alias").val(text);
+                    if(selctedStr.find(".fn option:first").length > 0){
+                        selctedStr.find(".fn option:first").attr("selected","selected");   // 在groups.js中fn表示函数，需要在添加时为空
+					}
+					if(selctedStr.find(".sort option:first").length > 0){
+                        selctedStr.find(".sort option:first").attr("selected","selected");   // sort.js中sort表示函数，需要在添加时为空
+					}
+
+                    return false;   // 可以添加的可能有多个，所以只显示第一个，用以排序！
+                }
+            });
+        }
+
+
+        function mousedownRestrictions(ele,str){
+            // click 在选择select和选择option会点击2次，mousedown：只点击一次
+            ele.on("mousedown",""+ str +" .field",function(){
+                const option = $(this).find("option");
+                const sib = $(this).parents(str).siblings().find(".field");
+                // 先删除所有的disabled
+                option.removeAttr("disabled").each(function(){
+                    const text = this.innerHTML;
+                    const val = this.value;
+                    const self = this;
+                    sib.each(function(){
+                        const SibVal = this.value;
+                        const SibText = $(this).find("option:selected").text();
+                        if(text === SibText && SibVal === val){
+                            $(self).attr("disabled","disabled");
+                        }
+                    })
+                });
+            });
+		}
+
+
+
 	</script>
 </head>
 
@@ -737,8 +838,11 @@
 		<form class="myForm propertys" id="propertyForm">
 		</form>
 		<div class="showSql"></div>
+		<div class="remarks">
+			<label class="remark_key">任务备注</label>
+			<span class="remark_value"></span>
+		</div>
 	</div>
-</body>
 </body>
 
 </html>
