--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -72,7 +72,8 @@
         }
     </style>
 
-    <!--<div id="aaa" style="height: 100%; width: 400px; border: 1px solid #000;position: relative;">-->
+    <div id="input">
+        <!--<div id="aaa" style="height: 100%; width: 400px; border: 1px solid #000;position: relative;">-->
         <div class="ensure">
             <span class="ensure_load loadParguet">上传源数据</span>
             <span class="ensure_load saveActionComp">保存</span>
@@ -93,16 +94,16 @@
         <div class="fromInp">
             <label style="float: left;">提取字段：</label>
             <div class="extractFields" style="float: left;">
-
                 <div class="archive extractField">
-                    <select class="fields auto_save" style="width:150px;height: 28px;margin-left: 12px;"/></select>
+                    <select class="field auto_save" style="width:150px;height: 28px;margin-left: 12px;"></select>
                     <!--<input type="text" class="remark"/>-->
                     <div class="regulation">
-                        <span class="add auto_save"></span>
-                        <span class="lessen auto_save"></span>
+                        <span class="add more_save"></span>
+                        <span class="lessen more_save"></span>
                     </div>
                 </div>
 
             </div>
         </div>
-    <!--</div>-->
+        <!--</div>-->
+    </div>
