--- a/html/preview.html
+++ b/html/preview.html
@@ -30,7 +30,7 @@
                         <a href="#" class="mn-logobox">
                             <img src="../images/mlogo.png" alt="" />
                         </a>
-                        <p class="mn-headtxt">小道科技欢迎您！</p>
+                        <p class="mn-headtxt">深脑科技欢迎您！</p>
                         <a href="javascript:void(0)" class="zuo1">
 									<span style="">
 										<i class="fa fa-hand-o-left"></i>
