--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -34,8 +34,8 @@
 		<div class="edit-state">
 			<div class="top-bar clearfix">
 				<!--<img src="../images/icon_save.png" alt="" title="" data-tip="保存"/>-->
-				<img src="../images/icon_prev.png" alt="" title="" data-tip="撤销"/>
-				<img src="../images/icon_next.png" alt="" title="" data-tip="恢复"/>
+				<!--<img src="../images/icon_prev.png" alt="" title="" data-tip="撤销"/>-->
+				<!--<img src="../images/icon_next.png" alt="" title="" data-tip="恢复"/>-->
 				<img src="../images/icon_fresh.png" alt="" title="" id="page-fresh" data-tip="刷新"/>
 				<img src="../images/icon_preview.png" alt="" title="" id="preview" data-tip="预览"/>
 			</div>
@@ -242,7 +242,7 @@
 								<a href="#" class="mn-logobox">
 									<img src="../images/mlogo.png" alt=""/>
 								</a>
-								<p class="mn-headtxt">小道科技欢迎您！</p>
+								<p class="mn-headtxt">深脑科技欢迎您！</p>
 								<a href="javascript:void(0)" class="zuo1">
 									<span style="">
 										<i class="fa fa-hand-o-left"></i>
@@ -278,6 +278,7 @@
 		</div>
     <script src="../plugin/jQuery/jquery.min.js"></script>
 		<script src="../plugin/d3/d3.v3.min.js"></script>
+	<script  src="../plugin/d3/d3.tip.js"></script>
     <script src="../js/login.js"></script>
     <script src="../plugin/zTree/jquery.ztree.all.min.js"></script>
     <!--<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>-->
