修改提示样式

--- a/editBI.html
+++ b/editBI.html
@@ -61,14 +61,14 @@
 				<img src="images/btn_shouqi.png" alt="" />
 			</div>
 			<div class="chart-type-box">
-				<img src="images/bar.png" alt=""  data-type="chart" class="u-btn-class"/>
-				<img src="images/biaoge.png" alt=""  data-type="table" class="u-btn-class"/>
-				<img src="images/txt.png" alt=""  data-type="text" class="u-btn-class"/>
+				<img src="images/bar.png" alt=""  data-type="chart" class="u-btn-class" data-tip="图表"/>
+				<img src="images/biaoge.png" alt=""  data-type="table" class="u-btn-class" data-tip="表格"/>
+				<img src="images/txt.png" alt=""  data-type="text" class="u-btn-class" data-tip="文本"/>
 				<form class="upload-img-box" id="fileForm">
 					<input type="file" id="uploadFile" onchange="imageUpload(this);"/>
-					<img src="images/img.png" alt=""  data-type="image" class="u-btn-class"/>
+					<img src="images/img.png" alt=""  data-type="image" class="u-btn-class" data-tip="图片"/>
 				</form>
-				<img src="images/button.png" alt=""  data-type="button" class="u-btn-class"/>
+				<img src="images/button.png" alt=""  data-type="button" class="u-btn-class" data-tip="按钮"/>
 			</div>
 		</div>
 		<div class="drag-bar clearfix">
