作业流名称更改

--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -134,6 +134,7 @@
 		var this_remark = '';
 		var this_new = true; //新建
 		var onenv = true;
+		var this_jobName = 'flowChart'; //作业流名称
 		var $url = '../xdbd-wf';  //../xdbd-wf
 
 		if (this_onenv == 'dev') {
@@ -141,7 +142,6 @@
 		} else if (this_onenv == 'test') {
 			onenv = false;
 		}
-
 		init_dag();
 
 		var property = {
@@ -390,7 +390,7 @@
 					// console.log(data)
 					if (data.code == 0) {
 						this_remark = data.data.remark;
-						            //  console.log(this_remark)
+						this_jobName = data.data.name;
 						$('.remark_value').html(this_remark);
 						var getDag = "";
 						if (data.data != '' && data.data != null && data.data.dag != null && data.data.dag != 'null') {
