--- a/main.html
+++ b/main.html
@@ -118,7 +118,7 @@
 					</div>
 				</div>
 				<div class="menu-top">
-					<ul>
+					<ul style="width:1076px;">
 						<!--<li class="active"><a href="#">项目管理</a></li>
 						<li><a href="#">系统管理</a></li>-->
 					</ul>
