--- a/editBI.html
+++ b/editBI.html
@@ -427,7 +427,7 @@
 									<input type="checkbox" checked="checked" class="tab_size"/>
 								</div>
 							</div>
-							<div class="tab_page">
+							<div class="tab_page wa-text">
 								<label>每页显示条数</label>
 								<select class="tab_pages">
 									<option value="10">10</option>
@@ -484,7 +484,7 @@
 				<div class="text-attr-box" style="display: none;">
 					<div class="title-box">
 						<h3>文本</h3>
-						<div class="set-text-attr">
+						<div class="set-text-attr" style="border-top: 1px solid #ccc">
 							<p>字体段落</p>
 							<div class="set-text-attr-wrap">
 								<div class="set-text-color">
