修改main的顶部菜单

--- a/main.html
+++ b/main.html
@@ -168,7 +168,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="bd-body bd-body-3">
+					<!--<div class="bd-body bd-body-3">
 						<div class="sider">
 							<div class="sider-nav">
 								<ul>
@@ -186,7 +186,7 @@
 								<iframe id="iframepage3" src="" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>
 							</div>
 						</div>
-					</div>
+					</div>-->
 					<div class="bd-body bd-body-4">
 						<div class="sider">
 							<div class="sider-nav">
